tests/compile-fail/integration__integration__mapfiles__seqmap_missing_section_header.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: mapfile missing section header
  ┌─ <mapfile-1>:2:1
  │
2 │ 300 ot
  │ ^^^^^^ entry without section header


